Chris - DevOrg/src/objects/Project_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Estimated_Hours_Remaining__c</fullName>
        <label>Estimated Hours Remaining</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <description>Estimated Hours needed for this person to complete project</description>
        <label>Estimated Hours</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Personal assigned to the project</description>
        <label>Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Resources</relationshipLabel>
        <relationshipName>Project_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Resource</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Project Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>